# DedupCommando

./: .gitattributes  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES  TRADEMARKS.md  about.hbs  about.toml  dedcom-archive-keyring.asc  deny.toml  minisign.pub
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: SAFETY.md  VERIFYING-RELEASES.md
docs/manual/: 01-intro.md  02-install.md  03-safety.md  04-quickstart.md  05-commando.md  06-classic.md  07-scanning.md  08-actions.md  09-triage-board.md  10-diff-trash.md  11-headless.md  12-maintenance.md  13-troubleshooting.md  14-hotkeys.md  README.md
scripts/: build.ps1  e2e-dir-completeness.sh  e2e-g5.sh  make-test-pool.sh  scan-contamination.sh  teardown-test-pool.sh  test-teardown-guard.sh  testpool-lib.sh
src/: app.rs  bench.rs  cli.rs  consent.rs  error.rs  lock.rs  logging.rs  main.rs  maint.rs  paths.rs  sysmon.rs  textsan.rs
src/actions/: apply_worker.rs  delete.rs  hardlink.rs  mod.rs  move_dir.rs  move_file.rs  quarantine.rs  reflink.rs  script_preview.rs
src/model/: action.rs  dataset.rs  duplicate.rs  mod.rs  preset.rs  scan.rs
src/pipeline/: governor.rs  hash.rs  mod.rs  safe_open.rs  verify.rs  walk.rs
src/scan/: mod.rs  worker.rs
src/state/: host_profile.rs  mod.rs  move_track.rs  schema.rs  store.rs
src/tui/: event.rs  mod.rs
src/tui/commander/: actions.rs  board.rs  dedup.rs  layout.rs  mod.rs  move_batch.rs  overlay.rs  panel.rs  state.rs
src/tui/screens/: action_review.rs  applying.rs  browser.rs  folder_picker.rs  mod.rs  resume.rs  scan_config.rs  scan_diff.rs  scanning.rs  summary.rs  trash.rs
src/zfs/: datasets.rs  mod.rs  pool.rs  snapshots.rs  version.rs
