[package]
name = "dedupcommando"
version = "0.9.0-beta.1"
edition = "2021"
rust-version = "1.82"
description = "ZFS-aware multi-panel duplicate-file deduplication tool for Linux"
license = "Apache-2.0"
repository = "https://github.com/dedupcommando/DedupCommando"
homepage = "https://github.com/dedupcommando/DedupCommando"
readme = "README.md"

# Crate id stays `dedupcommando` (defensive reservation); the public package/command/binary is
# `dedcom` (owner decision 2026-06-23). The .deb Package is `dedcom` via [package.metadata.deb].
[[bin]]
name = "dedcom"
path = "src/main.rs"

# Debian packaging (cargo-deb). Package name = `dedcom` (overrides the crate id) so the apt
# package and the command match. Built/signed/published by .github/workflows/release.yml (Ф18).
[package.metadata.deb]
name = "dedcom"
maintainer = "Denis \"DeQuzzy\" Kuznetsov <dedupcommando@dequzzy.io>"
section = "utils"
priority = "optional"
extended-description = """
DedupCommando is a Linux terminal UI for finding and safely deduplicating byte-for-byte \
identical files on ZFS pools (tested on Proxmox VE): a ZFS snapshot before each destructive \
batch, re-validation before acting, and a restorable quarantine. The installed command is `dedcom`."""

[dependencies]
ratatui = "0.29"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
blake3 = "1"
rayon = "1"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
reflink-copy = "0.1"
# Direct lstat bypassing std::fs::DirEntry::metadata: std calls
# statx(... STATX_ALL | AT_STATX_SYNC_AS_STAT), which on CIFS mounts
# hangs stat on a network timeout (~6 s) when the server is unreachable;
# libc::lstat (= newfstatat AT_SYMLINK_NOFOLLOW) without resolving the symlink.
libc = "0.2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
